--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -4,11 +4,11 @@
     right: 1rem;
     top: 1rem;
     height: 20px;
-    width: 20px;
+    width: 28px;
     cursor: pointer;
     @include transition-ease;
 
-    &_burger {
+    &__burger {
         position: absolute;
         right: 0;
         top: 0.5rem;
@@ -25,6 +25,28 @@
             height: 3px;
             background: set-text-color($primary-color);
             @include transition-ease;
+        }
+        &::after {
+            content: '';
+            position: absolute;
+            top: 8px;
+            width: 20px;
+            height: 3px;
+            background: set-text-color($primary-color);
+            @include transition-ease;
+        }
+
+        &.open {
+            transform: rotate(720deg);
+            background: transparent;
+
+            &::before {
+                transform: rotate(45deg) translate(5px, 8px);
+            }
+            &::after {
+                width: 28px;
+                transform: rotate(45deg) translate(5px, 8px);
+            }
         }
     }
 }
