--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,7 +40,7 @@ main {
             @include transition-ease;
 
             &:hover {
-                color: $secondary-color;
+                color: $tertiary-color;
             }
         }
     }
