--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -5,13 +5,10 @@
     align-items: center;
     text-align: center;
     background: 
-        linear-gradient(
-            to bottom,
-            rgba($primary-color, 0.3),
-            rgba($primary-color, 0)
-        ),
-        url('../img/_MG_6311.jpg') center top;
-    background-size: cover;
+    
+        url('../img/_MG_6069.jpg') center top;
+    background-size: contain;
+    background-repeat: no-repeat;
 
     &__name {
         font-size: 5rem;
