--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'config';
 @import 'home';
 @import 'menu';
+@import 'about';
 
 body {
     background: $primary-color;
@@ -14,9 +15,21 @@ h1, h2, h3 {
     font-weight: 400;
 }
 
+h2 {
+    font-weight: 400;
+    &:hover {
+        color: $tertiary-color;
+        @include transition-ease;
+    }
+}
+
 a {
     color: set-text-color($primary-color);
     text-decoration: none;
+}
+
+.text-secondary {
+    color: $secondary-color;
 }
 
 header {
