--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -12,7 +12,7 @@
             rgba($primary-color, 0),
             rgba($primary-color, 0)
         ),
-        url('../img/_MG_6069.jpg') center top;
+        url('../img/br-phill.jpg') center top;
     background-size: contain;
     background-repeat: no-repeat;
 
