--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,10 +1,13 @@
-.about {
+.projects {
     padding-bottom: 2rem;
 
     h2 {
         &:hover {
             color: $secondary-color;
         }
+    }
+    h1 {
+        color: $tertiary-color;
     }
 
     &__bio-image {
@@ -18,7 +21,7 @@
                 rgba($primary-color, 0),
                 rgba($primary-color, 0)
             ),
-            url('img/_MG_6069.jpg') center top;
+            url('../img/br-phill.jpg') center top;
         background-size: contain;
         background-repeat: no-repeat;
         display: flex;
@@ -47,9 +50,58 @@
         cursor: pointer;
 
         img {
+            max-width: 400px;
+            max-height: 200px;
+            display: block;
+            margin: 0 auto;
+        }
+        
+        &::after {
+            content: '';
+            position: absolute;
+            top: 100%;
+            left: 0;
+            height: 100%;
             width: 100%;
+            background: $secondary-color;
+            opacity: 0;
+            @include transition-ease;
+        }
+
+        &:hover {
+            &::after {
+                top: 0;
+                opacity: 0.9;
+            }
+            .projects__btn {
+                opacity: 1;
+            }
+        }
+
+    }
+
+    &__btns {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        z-index: 1;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        text-align: center;
+    }
+
+    &__btn {
+        opacity: 0;
+        color: set-text-color($secondary-color);
+        @include transition-ease;
+
+        &:hover {
+            color: set-text-color(set-text-color($secondary-color));
         }
     }
+
     .social-icons {
         display: flex;
         flex-direction: column;
